--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quote Qenerator</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="quote_container" id="quote_container">
@@ -28,6 +26,6 @@
       </div>
     </div>
     <div class="loader" id="loader"></div>
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
